--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_BASE_URL=http://158.160.15.49/api/v1/
-REACT_APP_AUTH_URL=http://158.160.15.49/auth/token/
+REACT_APP_BASE_STORAGE_URL=http://158.160.15.49/api/v1/storage
+REACT_APP_BASE_CUSTOMUSERS_URL=http://158.160.15.49/api/v1/customusers
+REACT_APP_BASE_AUTH_URL=http://158.160.15.49/auth/token
+REACT_APP_BASE_USERS_URL=http://158.160.15.49/api/v1/auth/users
